--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,15 @@ th{
 tr td{
     border: 1px solid black; 
 }
+fieldset{
+    margin: 20px;
+    display: block;
+  /* display: block;
+  margin-left: 2px;
+  margin-right: 2px;
+  padding-top: 0.35em;
+  padding-bottom: 0.625em;
+  padding-left: 0.75em;
+  padding-right: 0.75em;
+  border: 2px groove (internal value); */
+}
