Finishing design for lab10b

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,24 @@
+/* *{
+    background-color: #ffb26b;
+} */
+header{
+    background-color: #ff7b54;
+    height: 120%;
+}
+h1{
+    font-family:'Roboto', sans-serif;
+    font-weight: bolder;
+    font-size: 35px;
+    text-align: center;
+    padding: 1%;
+
+}
+body{
+    background-color: #ffb26b;
+}
 table{
     width: 100%;
+    background-color: #ff7b54;
 }
 table tr th{
     border: 1px solid black;
@@ -14,12 +33,46 @@ tr td{
 fieldset{
     margin: 20px;
     display: block;
-  /* display: block;
-  margin-left: 2px;
+    padding: 1% ;
+    /* border: 10%; */
+    background-color: #ffb26b;
+  /* display: block; */
+  /* margin-left: 2px;
   margin-right: 2px;
   padding-top: 0.35em;
   padding-bottom: 0.625em;
   padding-left: 0.75em;
   padding-right: 0.75em;
   border: 2px groove (internal value); */
+}
+input{
+    margin: 5px;
+    background-color: #ffd56b;
+}
+legend{
+    padding: 5px 10px;
+    font-weight: bolder;
+    font-family: 'Roboto', sans-serif ;
+}
+#btnAdd{
+    background-color: #ff7b54;
+    /* border: none; */
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+footer{
+   /* height: 100%; */
+   background-color: #ffd56b;
+   padding: 1%;
+   margin-top: 10px;
+
+}
+footer p {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-align: center;
+    font-weight: bold;
 }
